# opgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
Data/Shader/: blend.frag  blend.vert  depth_shader.frag  depth_shader.vert  light_shader.frag  light_shader.vert  outline.frag  outline.vert  texture_default.frag  texture_default.vert
Renderer/: application.cpp  application.h  camera.cpp  camera.h  lighting.cpp  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  pch.h  render_manager.cpp  render_manager.h  scene.cpp  scene.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  window.cpp  window.h
Renderer/Common/: application.cpp  application.h  camera.cpp  index_buffer.cpp  index_buffer.h  render_manager.cpp  render_manager.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
Renderer/Graphics/: lighting.cpp  lighting.h  material.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h
Renderer/OpenGL/: index_buffer.cpp  index_buffer.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
Renderer/Sandbox/: blend_scene.cpp  blend_scene.h  model_scene.cpp  model_scene.h  stencil_scene.cpp  stencil_scene.h
